# gtm-agent-user-health-analyzer

./: .env.example  .gitignore  AIRTABLE_SETUP.md  DYNAMIC_SCHEMA_GUIDE.md  LICENSE  README.md  mcp.json  pyproject.toml  requirements.txt  server.py
data/: sample_crm_data.csv  sample_support_data.csv  sample_usage_data.csv
src/: __init__.py  airtable_discovery.py  orchestrator.py
src/agents/: data_integration_agents.py  health_analysis_agents.py
src/models/: customer_health.py
